# volresample

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  ARM_BUILD_GUIDE.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  SETUP_SUMMARY.md  TODO.md  WHEEL_BUILDING.md  benchmark_resampling.py  flake.nix  pyproject.toml  setup.py  setup_cython.py  setup_cython_multiarch.py  visualize_results.py
.github/: copilot-instructions.md
.github/agents/: issue-hunter.agent.md
.github/workflows/: build_wheels.yml
src/mimage/: __init__.py  affine.py  convertions.py  edt.py  mimage.py  resample.py  utils.py
src/mimage/backends/: numpy_backend.py  torch_backend.py
src/mimage/backends/resampling/: __init__.py  cpu_detection.py  resampling_cython.c  resampling_cython.pyx  resampling_cython.pyx.backup  resampling_cython_wrapper.py  resampling_numpy.py  resampling_torch.py  setup_cython.py
src/mimage/backends/resampling/cython_src/: area.pxd  area.pyx  grid_sample.pyx  linear.pxd  linear.pyx  nearest.pyx
src/mimage/backends/tensor/: __init__.py  tensor_numpy.py  tensor_torch.py
src/miviz/: show.py
src/notebooks/: test_speed.py
src/volresample/: __init__.py  _config.py  _resample.c  _resample.pyi  _resample.pyx
src/volresample/cython_src/: area.pxd  area.pyx  cubic.pxd  cubic.pyx  grid_sample.pxd  grid_sample.pyx  linear.pxd  linear.pyx  nearest.pxd  nearest.pyx  utils.pxd  utils.pyx
tests/: __init__.py  benchmark.py  benchmark_resampling.py  conftest.py  test_affine.py  test_backends.py  test_cubic.py  test_dtype_support.py  test_dtypes.py  test_grid_sample.py  test_mimage.py  test_mimage_indexing_vs_sitk.py  test_resample.py  test_resampling.py  test_utils.py  test_validation.py  torch_reference.py
