[project]
name = "volresample"
version = "0.1.0"
description = "Fast 3D volume resampling with optimized Cython"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
]
authors = [
    {name = "Johannes", email = "j.hofmanninger@gmail.com"}
]
license = {text = "MIT"}
keywords = ["volume", "resampling", "interpolation", "3d", "medical imaging", "cython"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Cython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.urls]
Homepage = "https://github.com/yourusername/volresample"
Repository = "https://github.com/yourusername/volresample"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "torch>=1.9.0",
]

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "Cython>=3.0.0",
    "numpy>=1.20.0",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# Build for multiple Python versions
build = ["cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*"]

# Skip PyPy, musllinux (for simplicity), and 32-bit builds
skip = ["pp*", "*-musllinux*", "*-win32", "*-manylinux_i686"]

# Build for multiple architectures
# x86_64 on Linux, macOS, Windows
# ARM64 (aarch64) on Linux
archs = ["auto"]

# Environment variables for the build
environment = {CYTHON_NTHREADS = "4"}

# Test the built wheels
test-requires = ["pytest", "numpy"]
test-command = "pytest {project}/tests -v"
test-skip = ["*-macosx_arm64", "*-macosx_universal2:arm64"]  # Skip tests on emulated ARM

# Platform-specific settings
[tool.cibuildwheel.linux]
# Use manylinux2014 for broader compatibility
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"

# Repair wheel to include shared libraries
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

# Build ARM wheels using QEMU emulation
before-all = [
    "yum install -y gcc gcc-c++ || apt-get update && apt-get install -y gcc g++",
]

[tool.cibuildwheel.macos]
# Build universal2 wheels on macOS (x86_64 + ARM64)
archs = ["x86_64", "arm64", "universal2"]

# Repair wheel for macOS
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

before-all = [
    "brew install libomp || true",  # OpenMP support on macOS
]

[tool.cibuildwheel.windows]
# Build for 64-bit Windows
archs = ["AMD64"]

# Note: OpenMP may require special handling on Windows
# You might need to skip OpenMP or use different flags

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[dependency-groups]
dev = [
    "cibuildwheel>=3.2.1",
    "torch>=2.8.0",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "mypy>=0.950",
    "cython>=3.0.0",
    "ipywidgets>=8.1.7",
]

[tool.setuptools.packages.find]
where = ["src"]  
include = ["volresample*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

