[project]
name = "volresample"
version = "0.1.0"
description = "Fast 3D volume resampling with optimized Cython"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.0",
]
authors = [
    {name = "Johannes", email = "j.hofmanninger@gmail.com"}
]
license = "MIT"
keywords = ["volume", "resampling", "interpolation", "3d", "medical imaging", "cython"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Cython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.urls]
Homepage = "https://github.com/JoHof/volresample"
Repository = "https://github.com/JoHof/volresample"

[build-system]
requires = [
    "setuptools>=68",
    "packaging>=24.2",
    "wheel",
    "Cython>=3.0.0",
    "numpy>=2.0.0",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# Build for multiple Python versions (3.9+, 3.8 is EOL)
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*"]

# Skip PyPy, musllinux (for simplicity), and 32-bit builds
skip = ["pp*", "*-musllinux*", "*-win32", "*-manylinux_i686"]

# Build for multiple architectures
# x86_64 on Linux, macOS, Windows
# ARM64 (aarch64) on Linux
archs = ["auto"]

# Environment variables for the build
environment = {CYTHON_NTHREADS = "4"}
# Build dependencies come from [build-system] requires — no before-build needed

# Test the built wheels
test-requires = ["pytest", "numpy"]
test-command = "pytest {project}/tests -v --ignore={project}/tests/torch_reference.py --ignore={project}/tests/benchmark_resampling.py"
test-skip = ["*-manylinux_aarch64"]  # Skip tests on QEMU-emulated platforms only

# Platform-specific settings
[tool.cibuildwheel.linux]
# Use manylinux2014 for broader compatibility
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"

# Repair wheel to include shared libraries
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
# Use native arch per runner: macos-13 → x86_64, macos-14 → arm64
# (cross-compiling fails because Apple Clang OpenMP flags differ per arch)
archs = ["auto"]

# Repair wheel for macOS
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

# Install OpenMP and set compiler flags for macOS
before-all = "brew install libomp || true"

# Set OpenMP paths for Homebrew on both Intel and ARM Macs
[tool.cibuildwheel.macos.environment]
CFLAGS = "-I/opt/homebrew/opt/libomp/include -I/usr/local/opt/libomp/include"
LDFLAGS = "-L/opt/homebrew/opt/libomp/lib -L/usr/local/opt/libomp/lib -lomp"
CYTHON_NTHREADS = "4"

[tool.cibuildwheel.windows]
# Build for 64-bit Windows
archs = ["AMD64"]

# Note: OpenMP may require special handling on Windows
# You might need to skip OpenMP or use different flags

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[dependency-groups]
dev = [
    "cibuildwheel>=3.2.1; python_version >= '3.11'",
    "torch>=2.8.0",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.13.0",
    "ruff>=0.8.0",
    "mypy>=0.950",
    "bandit>=1.7.0",
    "pre-commit>=3.0.0",
    "cython>=3.0.0",
    "ipywidgets>=8.1.7",
]

[tool.setuptools]
# MANIFEST.in controls the sdist; package-data controls the wheel.
# Setting this to false prevents MANIFEST.in from leaking
# .pyx/.pxd/.c into wheels.
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["volresample*"]

[tool.setuptools.package-data]
volresample = ["*.pyi", "py.typed"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Black and isort are replaced by ruff format and ruff lint (I rules)

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "*.egg-info",
    "*.pyx",
    "*.c",
    "*.ipynb",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by ruff format)
    "E402",  # module level import not at top of file
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "F841",  # local variable assigned but never used
]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"

[tool.bandit]
exclude_dirs = ["tests", "build", ".venv"]
skips = ["B101"]  # Skip assert_used check (common in tests)
